# build-large-language-model

./: .gitignore  README.md  main.py  pyproject.toml
attention/: causal_attention.py  causal_dropout_attention.py  linear_self_attention.py  multi_head_attention.py  multi_head_attention_wrapper.py  self_attention.py  simple_self_attention.py
build_large_language_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
embedding-step/: embedding.py  pos-embedding.py  simpleDataLoader.py  simpleTokenizer.py
embedding_step/: byte-pair-encoding.py  simpleDataLoader.py  sliding-window.py  tokenizer.py
fine_tuning/: dataset.py  fine_tuning.py  train.py  util.py
gpt_model/: config.py  feed_forward.py  gelu.py  generate_text.py  gpt_model.py  layer_norm.py  shortcut.py  transformer.py
pre_training/: calc_loss.py  config.py  eval_flow.py  install_gpt2_params.py  plot.py  train_model.py  util.py
