[project]
name = "build-large-language-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
]

[tool.setuptools]
packages = ["attention", "gpt_model", "pre_training"]
