[project]
name = "build-large-language-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assign>=1.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "tensorflow>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["attention", "gpt_model", "pre_training", "embedding_step", "fine_tuning"]
